# Practice

./: .gitignore  q
Algorithms/Additional/: Fibonacci.cpp  countingValleys.cpp  hourglass.cpp  jumpingOnClouds.cpp  repeatedString.cpp  reverseArray.cpp  sockMerchant.cpp
Algorithms/HanoiTower/: main
Algorithms/Sorting/BubbleSort/: BubbleSort  BubbleSort.cpp
Algorithms/Sorting/HeapSort/: .gitignore  CMakeLists.txt  main.cpp
Algorithms/Sorting/InsertionSort/: InsertionSort  InsertionSort.cpp
Algorithms/Sorting/MergeSort/: MergeSort  MergeSort.cpp
Algorithms/Sorting/SelectionSort/: SelectionSort  SelectionSort.cpp
C++ stuff/Basic/PointersVsReferences/: CMakeLists.txt  main  main.cpp
C++ stuff/Basic/PostPreIncrementDecrement/: CMakeLists.txt  Wrapper.hpp  main.cpp
C++ stuff/Basic/SizeOfPrimitiveTypes/: SizeOf  SizeOf.cpp
C++ stuff/Basic/TypeConversions/: CMakeLists.txt  main.cpp
C++ stuff/Functions/: functionPointer.cpp  functionTemplate.cpp
C++ stuff/OOP/Object lifecircle/: Person  Person.cpp
C++ stuff/SmartPointer/: SmartPointer.hpp
C++ stuff/Threads/: a.txt  main.cpp
Data Structures/Array/: main.cpp
Data Structures/Forward list/: ForwardList.hpp  main.cpp
Data Structures/List/: CMakeLists.txt  DoubleLinkedList.hpp  main.cpp
Data Structures/SingleLinkedList/: CMakeLists.txt  List.cpp
Data Structures/Vector/: Vector.cpp  Vector.hpp  main.cpp
Data Structures/vector/: CMakeLists.txt  Vector.cpp  Vector.hpp  main.cpp
Design Patterns/Behavioral/Strategy/: BubbleSort.cpp  BubbleSort.hpp  CMakeLists.txt  Client.cpp  InsertionSort.cpp  InsertionSort.hpp  SelectionSort.cpp  SelectionSort.hpp  SortStrategy.hpp  SortingContext.cpp  SortingContext.hpp
Design Patterns/Behavioral/Visitor/: Bob.hpp  CMakeLists.txt  Client.cpp  Customer.hpp  Grinch.hpp  Mary.hpp  Meruzhan.hpp  Santa.hpp  Sona.hpp  Visitor.hpp
Design Patterns/Creational/Singleton/: CMakeLists.txt  Client.cpp  Singleton.cpp  Singleton.hpp
Games/Chess/: Bishop.cpp  Bishop.h  Board.cpp  Board.h  EmptyCell.cpp  EmptyCell.h  Figure.cpp  Figure.h  Game.cpp  Game.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Player.cpp  Player.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  main.cpp
Games/HanoiTower/: main  main.cpp
(+42 files in other folders)
